integrate SafeArchiveInputStream into ArchiveSupport #3029